--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,13 @@ services:
     restart: unless-stopped
     volumes:
       - ./.env:/app/.env
-#  redis:
-#    container_name: "redis"
-#    image: "eqalpha/keydb:alpine"
-#    restart: unless-stopped
-#    command: "keydb-server /etc/keydb/keydb.conf"
-#    ports:
-#      - "6379:6379"
-#    volumes:
-#      - ./volumes/redis/data:/data
-#      - ./volumes/redis/redis.conf:/etc/keydb/keydb.conf
+  redis:
+    container_name: "redis"
+    image: "eqalpha/keydb:alpine"
+    restart: unless-stopped
+    command: "keydb-server /etc/keydb/keydb.conf"
+    ports:
+      - "6380:6379"
+    volumes:
+      - ./volumes/redis/data:/data
+      - ./volumes/redis/redis.conf:/etc/keydb/keydb.conf
