--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chalk": "^5.2.0",
     "discord.js": "^14.8.0",
     "dotenv": "^16.0.3",
+    "fast-average-color-node": "^2.6.0",
     "ioredis": "^5.3.2",
     "mongoose": "^7.0.3",
     "node-schedule": "^2.1.1"
